// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkRtlToggle should render correctly 1`] = `
<button
  className="bpk-link"
  onClick={[Function]}
  title="Keyboard Shortcut: ctrl + cmd + r"
  type="button"
>
  RTL 
  on
</button>
`;

exports[`BpkRtlToggle should render correctly when toggled 1`] = `
<button
  className="bpk-link"
  onClick={[Function]}
  title="Keyboard Shortcut: ctrl + cmd + r"
  type="button"
>
  RTL 
  off
</button>
`;

exports[`BpkRtlToggle should render correctly with the className prop 1`] = `
<button
  className="bpk-link foo"
  onClick={[Function]}
  title="Keyboard Shortcut: ctrl + cmd + r"
  type="button"
>
  RTL 
  off
</button>
`;
